<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snob Sine Nobilitate</string>
    <string name="action_settings">Settings</string>
    <string name="price_currency">£ </string>

    <string name="title_activity_nav_drawer">@string/app_name</string>
    <string name="product_detail_description">Chinos with a structured weave in cotton. Casual cut, logo button and concealed zip fastening, two side pockets, a coin pocket, two buttoned welt pockets at the back, contrasting waistband, belt loops and a leather tag embossed with the brand name and logo.</string>

    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_store_finder">StoreFinderActivity</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Collection</string>
    <string name="title_section3">Stores</string>
    <string name="title_section4">Contact us</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="product_detail_colors_text">Colors</string>
    <string name="product_detail_size_text">Available Size</string>
    <string name="product_detail_save_text">SAVE</string>
    <string name="product_detail_buy_text">BUY</string>
    <string name="product_detail_description_title">Description</string>

    <string name="home_general">Il brand \"S.nob Sine Nobilitate\" nasce nel 2007 da un\'idea di due ragazzi genovesi , che si è recentemente trasformata in realtà con l\'apertura dell\'omonima azienda.
Il nome del marchio riprende il significato latino del termine Snob: solitamente si indicava una classe sociale che pur non avendo titolo nobiliare frequentava i salotti dei nobili dell\'epoca.
L\'idea del brand rivisita questo significato: per avere stile non serve avere un titolo nobiliare o essere di una determinata estrazione sociale.
Con grafiche semplici ma accattivanti ed originali, con prodotti di grande qualità lavorati in Italia e con prezzi competitivi, l\'azienda permette a tutti di vestirsi con stile tipicamente italiano e di alto livello.
Il progetto ha preso il via con una produzione di tshirt uomo/donna molto semplice, volte alla diffusione del marchio: il prodotto, suddiviso in quattro differenti colori, rappresentava uno stemma stile \"casata nobiliare\" con effetto vintage che ben riprendeva il significato del nome del brand e che, infatti, viene ancora utilizzato oggi ed è diventato il simbolo distintivo del marchio genovese.
La prima produzione ha da subito riscosso grande successo, non solo in Liguria ma in tutto il Nord Italia, per poi diffondersi anche nel Lazio, in Toscana ed in Sicilia.
Le vendite sono state accompagnate da alcuni eventi in rinomate discoteche liguri con la partecipazione di personaggi famosi e da collaborazioni con personaggi dello sport italiano.
Nel corso degli anni l\'azienda è cresciuta e ha modificato e migliorato i propri prodotti: oggi S.nob Sine Nobilitate offre una collezione intera uomo e donna per la stagione primavera estate 2013, con alcuni capi Made in Italy di produzione artigianale, pezzi unici che solo questo marchio offre.
La rete di negozi dei prodotti S.nob è cresciuta ed il marchio inizia ad essere utilizzato da personaggi di spicco del mondo sportivo italiano.
S.nob Sine Nobilitate si distingue dagli altri brand per la qualità dei tessuti utilizzati: nonostante il periodo difficile per l\'economia in tutto il mondo, l\'azienda genovese non si tira indietro e investe fortemente su tessuti di alta qualità, italiani e non, curandone i minimi dettagli.
I prodotti S.nob sono unici nel loro genere: una fusione tra originalità e semplicità che solo grazie al grande impegno dei due fondatori è possibile da raggiungere ed è difficilmente imitabile.</string>

<!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="network_error_message">Network Error...Try Again Later</string>


</resources>
