<ScrollView
  android:id="@+id/scroll_view"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:scrollbars="none"
  tools:context="com.project.monica.snobsinenobilitate.views.fragments.ProductDetailFragment"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/product_detail_title"
        android:layout_width="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

      <View
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="1dp" />

      <TextView
        android:id="@+id/product_detail_price"
        android:layout_width="wrap_content"
        android:textSize="@dimen/card_view_price_text_size"
        android:textColor="@android:color/white"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
      android:id="@+id/product_detail_img"
      android:layout_width="match_parent"
      android:elevation="@dimen/card_view_elevation"
      android:scaleType="centerCrop"
      android:minHeight="@dimen/product_detail_img_height"
      android:layout_height="wrap_content" />


    <!-- Card View Colors - tmp static-->
    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:layout_marginBottom="@dimen/activity_vertical_margin"
      android:elevation="@dimen/card_view_elevation"
      app:cardCornerRadius="@dimen/cardview_default_radius"
      android:layout_height="wrap_content">

      <LinearLayout
        android:id="@+id/card_view_colors"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_grey"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">

        <TextView
          android:text="@string/product_detail_colors_text"
          android:layout_width="wrap_content"
          android:layout_gravity="center"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
          android:layout_marginLeft="@dimen/spacing_normal"
          android:layout_marginRight="@dimen/spacing_normal"
          android:id="@+id/product_detail_container_colors"
          android:layout_width="match_parent"
          android:layout_height="@dimen/button_height_normal" />
      </LinearLayout>


    </android.support.v7.widget.CardView>


    <!-- Card View Size - tmp static -->
    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:layout_marginBottom="@dimen/activity_vertical_margin"

      android:elevation="@dimen/card_view_elevation"
      app:cardCornerRadius="@dimen/cardview_default_radius"
      android:layout_height="wrap_content">

      <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/dark_grey"
        android:layout_height="wrap_content">

        <TextView
          android:text="@string/product_detail_size_text"
          android:layout_width="wrap_content"
          android:layout_gravity="center"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:layout_height="wrap_content" />


        <android.support.v7.widget.RecyclerView
          android:layout_marginLeft="@dimen/spacing_normal"
          android:layout_marginRight="@dimen/spacing_normal"
          android:id="@+id/product_detail_container_sizes"
          android:layout_gravity="center_horizontal"
          android:layout_width="match_parent"
          android:layout_height="@dimen/button_height_normal" />
      </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:layout_marginBottom="@dimen/activity_vertical_margin"
      android:elevation="@dimen/card_view_elevation"
      android:paddingLeft="@dimen/spacing_normal"
      android:paddingRight="@dimen/spacing_normal"
      app:cardCornerRadius="@dimen/cardview_default_radius"
      android:layout_height="wrap_content">

      <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/dark_grey"
        android:layout_height="match_parent">

        <TextView
          android:text="@string/product_detail_description_title"
          android:layout_gravity="center"
          android:gravity="center"
          android:layout_width="wrap_content"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:layout_height="wrap_content" />


        <TextView
          android:id="@+id/product_detail_description"
          android:layout_width="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:paddingLeft="@dimen/spacing_normal"
          android:paddingRight="@dimen/spacing_normal"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:layout_height="wrap_content" />
      </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_gravity="center_horizontal"
      android:orientation="horizontal"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:layout_height="wrap_content">

      <Button
        android:id="@+id/product_detail_save_button"
        style="@style/ButtonDetailStyle"
        android:layout_weight="1"
        android:text="@string/product_detail_save_text" />

      <View
        android:layout_width="@dimen/button_larger_diameter_size"
        android:layout_height="0dp" />

      <Button
        android:id="@+id/product_detail_buy_button"
        style="@style/ButtonDetailStyle"
        android:layout_weight="1"
        android:text="@string/product_detail_buy_text" />

    </LinearLayout>
  </LinearLayout>
</ScrollView>
